# noop-package

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
noop/: README.md  pyproject.toml
noop/src/noop_BAND/: __init__.py  donada.py
noop/tests/: test_noop.py
tests/: test_noop.py
