[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "noop_BAND"
version = "0.0.5"
authors = [
  { name="Bill Anderson", email="band@acm.org" },
]
description = "An example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/band/noop-package/noop"

[project.scripts]
noop = "noop_BAND.noop:main"
