[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "noop_BAND"
version = "0.2.1"
authors = [
  {name = "Bill Anderson", email = "band@acm.org"}
]
description = "An example package"
readme = "README.md"
homepage = "https://github.com/band/noop-package/noop"

dependencies = []
requires-python = ">=3.11"

[project.scripts]
noop = "noop_BAND.noop:main"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
